codex-rs/tui/src/tui/snapshots/codex_tui__tui__scrollback__tests__standard_viewport_growth_1.snap
---
source: tui/src/tui/scrollback_tests.rs
expression: screen.contents()
---
history-2
history-3
history-4

composer-1
composer-2
